Add field to edit days until invoice is overdue on Admin Edit Customer page.

--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -127,6 +127,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="days_until_invoice_overdue">Days until invoice overdue</label>
+                    <input class="form-control input-lg" id="days_until_invoice_overdue" type="number" ng-model="customer.daysUntilInvoiceOverdue" />
+                </div>
+
+                <div class="form-group">
                     <label for="invoice_payment_terms">Payment terms</label>
                     <input class="form-control input-lg" id="invoice_payment_terms" type="text" ng-model="customer.invoicePaymentTerms" />
                 </div>
