Change button text on review meal plan page.

--- a/src/web/templates/customer/meal-plan/review.html
+++ b/src/web/templates/customer/meal-plan/review.html
@@ -8,7 +8,7 @@
     <button class="cp-btn cp-btn-primary cp-btn-lg"
             ng-click="confirm()"
             ng-disabled="!isConfirmButtonEnabled">
-        Confirm
+        Continue to checkout
     </button>
 
     <a class="cp-btn cp-btn-link" href="/customer/dashboard">Save for later</a>
