Fix spelling mistake on the search page.

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -125,7 +125,7 @@
     </form>
 
     <div class="row">
-        <p class="cp-search-notice col-md-12" ng-show="isSearching">Seaching...</p>
+        <p class="cp-search-notice col-md-12" ng-show="isSearching">Searching...</p>
 
         <div class="cp-search-notice col-md-12" ng-if="packages.length === 0">
             <p>We couldn’t find any results matching your criteria, but tweaking your search may help. Here are some ideas:</p>
