Disable autocompletion for the promo code field.

--- a/src/web/templates/general/checkout-payment.html
+++ b/src/web/templates/general/checkout-payment.html
@@ -137,7 +137,8 @@
                         <input class="cp-form-control"
                             id="promo_code"
                             type="text"
-                            ng-model="order.promoCode" />
+                            ng-model="order.promoCode"
+                            autocomplete="off" />
                     </div>
 
                     <div class="col-md-6">
