Refactor package display into cp-package-detail directive.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -936,6 +936,7 @@ hr {
 }
 
 @import 'directives/cp-package-card.scss';
+@import 'directives/cp-package-detail.scss';
 @import 'directives/cp-review-card.scss';
 @import 'directives/cp-dietary-requirements-form';
 @import 'directives/cp-review-meal-plan';
