Fix "view in frontend" link when viewing vendor as staff.

--- a/src/web/templates/admin/edit-vendor.html
+++ b/src/web/templates/admin/edit-vendor.html
@@ -2,7 +2,7 @@
     <h1>Vendor {{vendor.humanId}}: {{ vendor.name }}</h1>
 
     <p>
-        <a ng-href="/vendor/{{ vendor.humanId }}">View in frontend</a>
+        <a ng-href="/vendor/{{ vendor.id }}">View in frontend</a>
         <br />
         <a ng-href="/admin/global-id-lookup/{{ vendor.id }}">View in global ID lookup</a>
     </p>
