--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -953,6 +953,7 @@ hr {
 @import 'vendor/delivery-radiuses.scss';
 @import 'vendor/orders.scss';
 @import 'vendor/packages.scss';
+@import 'team/order.scss';
 @import 'footer.scss';
 @import 'form.scss';
 @import 'links.scss';
