--- a/src/web/templates/directives/cp-package-detail.html
+++ b/src/web/templates/directives/cp-package-detail.html
@@ -1,5 +1,5 @@
 <div class="col-md-5">
-    <div class="cp-package-detail-image" style="background-image: url('{{ package.images[0].thumbnail }}')"></div>
+    <div class="cp-package-detail-image" style="background-image: url('{{ package.images[0].medium }}')"></div>
 </div>
 
 <div class="cp-package-detail-right col-md-7">
