--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="container">
-    <div class="cp-package">
+    <div class="cp-package" ng-if="package">
         <article class="cp-package-main">
             <carousel class="cp-package-carousel">
                 <slide ng-repeat="image in package.images" active="slide.active">
@@ -57,7 +57,7 @@
             <h1 class="cp-package-name">{{ package.name }}</h1>
 
             <span class="cp-package-cost">
-                {{ package.costIncludingVat | currency:'£':2 }}
+                <em ng-bind="package.costIncludingVat | currency:'£':2"></em>
                 <span>per head</span>
             </span>
 
