--- a/src/web/scss/directives/cp-package-card.scss
+++ b/src/web/scss/directives/cp-package-card.scss
@@ -107,6 +107,10 @@ cp-package-card {
     width: 60px;
     z-index: 2;
 
+    > em {
+        font-style: normal;
+    }
+
     > span {
         color: rgba(255, 255, 255, .7);
         display: block;
