--- a/src/web/scss/partials/_cp-package.scss
+++ b/src/web/scss/partials/_cp-package.scss
@@ -81,6 +81,10 @@
     text-align: center;
     width: 130px;
 
+    > em {
+        font-style: normal;
+    }
+
     > span {
         color: rgba(255, 255, 255, .7);
         display: block;
