Fix broken e2e tests.

--- a/src/web/templates/general/view-package.html
+++ b/src/web/templates/general/view-package.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="container">
-    <div class="cp-package" ng-if="package">
+    <div class="cp-package">
         <article class="cp-package-main">
             <carousel class="cp-package-carousel">
                 <slide ng-repeat="image in package.images" active="slide.active">
