Add 'Back To Admin' button to nav bar when masquerading.

--- a/src/web/scss/directives/cp-header.scss
+++ b/src/web/scss/directives/cp-header.scss
@@ -66,6 +66,12 @@ cp-header {
             text-decoration: none;
         }
 
+        > li > a.cp-back-to-admin {
+            margin-top: -10px;
+            line-height: 26px;
+            color: white;
+        }
+
         > li > a.btn-login-green {
             margin-top: -10px;
             line-height: 26px;
