--- a/src/web/templates/general/vendor-nav-menu-items.html
+++ b/src/web/templates/general/vendor-nav-menu-items.html
@@ -1,3 +1,10 @@
+<li>
+    <a class="cp-btn cp-btn-primary cp-btn-sm cp-btn-block cp-back-to-admin"
+            ng-if="isStaffMasquerading"
+            ng-click="goToMasqueradeLogoutPage()">
+        Back to admin
+    </a>
+</li>
 <li><a href="/vendor/orders">Orders</a></li>
 <li><a href="/vendor/addresses">Addresses</a></li>
 <li><a href="/vendor/profile">Profile</a></li>
