Rename 'replace MP package' function.

--- a/src/web/templates/directives/cp-review-meal-plan.html
+++ b/src/web/templates/directives/cp-review-meal-plan.html
@@ -68,8 +68,8 @@
                 ng-href="/package/{{ selectedProposedOrder.package.humanId }}-{{ selectedProposedOrder.package.name | slugify }}"
                 >View details</a>
 
-            <button class="cp-btn cp-btn-link cp-btn-block cp-replace-package" ng-click="replace()">
-                Replace with new package
+            <button class="cp-btn cp-btn-link cp-btn-block cp-replace-package" ng-click="replaceWithRandomUnusedPackage()">
+                Replace with random unused package
             </button>
         </aside>
     </div>
