--- a/src/web/templates/admin/meal-plan-review.html
+++ b/src/web/templates/admin/meal-plan-review.html
@@ -2,7 +2,7 @@
     <cp-review-meal-plan
         ng-if="mealPlan"
         cp-meal-plan="mealPlan"
-        cp-customer-id="customer.id"
+        cp-customer-id="customerId"
         ></cp-review-meal-plan>
 
     <button class="cp-btn cp-btn-primary cp-btn-lg"
