--- a/src/web/templates/admin/edit-package.html
+++ b/src/web/templates/admin/edit-package.html
@@ -64,6 +64,18 @@
             <select class="form-control input-lg" id="package_packaging_type" ng-options="type.value as type.label for type in packagingTypes" ng-model="vendorPackage.packagingType"></select>
         </div>
 
+        <div class="form-group">
+            <label for="package_notice">Notice</label>
+
+            <select class="form-control input-lg"
+                id="package_notice"
+                name="packageNotice"
+                required aria-required="true"
+                ng-model="vendorPackage.notice"
+                ng-options="noticeOption.value as noticeOption.label for noticeOption in noticeOptions"
+                ></select>
+        </div>
+
         <input class="btn btn-primary btn-lg" type="submit" value="Save" />
     </form>
 </div>
