Add page to create promo codes.

--- a/src/web/templates/admin/promo-codes/list.html
+++ b/src/web/templates/admin/promo-codes/list.html
@@ -1,5 +1,11 @@
 <div class="wide-wrapper">
     <h1>Promo codes</h1>
 
+    <p>
+        <a class="btn btn-primary cp-create-promo-code" href="/admin/promo-codes/create">
+            Create a promo code
+        </a>
+    </p>
+
     <div ui-grid="gridOptions" ui-grid-pagination id="promo-codes-table"></div>
 </div>
