Add e2e test for trying to use promo code already used by the customer.

--- a/src/web/templates/general/checkout-payment.html
+++ b/src/web/templates/general/checkout-payment.html
@@ -137,7 +137,7 @@
                         <input class="cp-form-control"
                             id="promo_code"
                             type="text"
-                            ng-model="order.promoCode"
+                            ng-model="order.promoCodeCode"
                             autocomplete="off" />
                     </div>
 
