Add Google Analytics ecommerce integration.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,6 +72,7 @@
 
                 ga('create', 'UA-44429548-1', 'auto');
                 ga('require', 'displayfeatures');
+                ga('require', 'ec');
             </script>
         {% endif %}
 
