--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -17,6 +17,8 @@
 
     <h2>Details</h2>
 
+    <div id="cp-customer-details">
+
     <p>Pay on account? {{ customer.paidOnAccountStatus | getPaidOnAccountStatusText }}</p>
 
     <p>Customer since: {{ customer.dateAdded | date:'dd/MM/yyyy' }}</p>
@@ -36,6 +38,10 @@
 
     <p>Persona: {{ customer.persona | getCustomerPersonaText }}</p>
 
+    <p>Sales staff type: {{ customer.salesStaffType | getCustomerSalesStaffTypeText }}</p>
+
+    </div>
+
     <h2>Edit</h2>
 
     <form class="admin-form" name="updateForm" ng-submit="save()">
@@ -47,6 +53,15 @@
                     name="customerPersona"
                     ng-model="customerForEditing.persona"
                     ng-options="option.value as option.label for option in personaOptions"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Sales staff type</label>
+                <select class="form-control input-lg"
+                    required
+                    name="customerSalesStaffType"
+                    ng-model="customerForEditing.salesStaffType"
+                    ng-options="option.value as option.label for option in salesStaffTypeOptions"></select>
             </div>
 
             <input class="btn btn-primary btn-lg" type="submit" value="Save" />
