--- a/src/web/templates/general/checkout-payment.html
+++ b/src/web/templates/general/checkout-payment.html
@@ -7,10 +7,12 @@
         <div class="cp-checkout-main">
             <h1 class="cp-heading cp-checkout-heading">Payment details</h1>
 
-            <p>How would you like to pay for this order?</p>
+            <p ng-if="requirePaymentDetails">How would you like to pay for this order?</p>
+            <p ng-if="!requirePaymentDetails">Your order is free!</p>
 
             <form class="cp-form cp-checkout-payment-form" name="checkoutForm" novalidate role="form" ng-submit="finish()">
-                <fieldset ng-if="user.customer.isPaidOnAccount">
+                <fieldset ng-if="user.customer.isPaidOnAccount && requirePaymentDetails"
+                        class="cp-order-payment-type-choice">
                     <label class="cp-radio-inline">
                         <input type="radio"
                             ng-model="order.isPayOnAccount"
@@ -25,9 +27,10 @@
                     </label>
                 </fieldset>
 
-                <hr ng-if="user.customer.isPaidOnAccount" />
+                <hr ng-if="user.customer.isPaidOnAccount && requirePaymentDetails" />
 
-                <fieldset class="row cp-checkout-payment-method" ng-if="!order.isPayOnAccount">
+                <fieldset class="row cp-checkout-payment-method"
+                        ng-if="!order.isPayOnAccount && requirePaymentDetails">
                     <div class="cp-form-group col-md-6">
                         <label class="cp-form-label" for="payment_method">Payment method</label>
                         <select class="cp-form-control"
@@ -51,7 +54,8 @@
 
                 <p class="cp-form-error" ng-show="checkoutForm.$submitted && checkoutForm.$invalid">Card number, expiry month and year and CVC are required.</p>
 
-                <fieldset class="row cp-checkout-payment-card" ng-if="!order.isPayOnAccount && !order.paymentMethod">
+                <fieldset class="row cp-checkout-payment-card"
+                        ng-if="!order.isPayOnAccount && !order.paymentMethod && requirePaymentDetails">
                     <div class="cp-form-group col-md-6">
                         <label class="cp-form-label" for="card_number">Card number</label>
                         <input class="cp-form-control"
@@ -108,7 +112,8 @@
                     </div>
                 </fieldset>
 
-                <fieldset ng-if="order.isPayOnAccount">
+                <fieldset ng-if="order.isPayOnAccount && requirePaymentDetails"
+                        class="cp-order-pay-on-account-details">
                     <div class="cp-form-group">
                         <label class="cp-form-label" for="purchase_order_number"><abbr title="purchase order">PO</abbr> number</label>
                         <input class="cp-form-control"
