Use newly merged customer pay-on-account details API.

--- a/src/web/templates/admin/edit-customer.html
+++ b/src/web/templates/admin/edit-customer.html
@@ -87,7 +87,9 @@
                     <label for="max_spend_per_month">Account limit per month</label>
                     <div class="input-group input-group-lg input-group-readonly">
                         <div class="input-group-addon">£</div>
-                        <input class="form-control input-lg" id="max_spend_per_month" type="number" min="1" step="0.01" ng-model="customer.maxSpendPerMonth" />
+                        <input class="form-control input-lg" id="max_spend_per_month" type="number"
+                            min="500" step="0.01"
+                            ng-model="customer.maxSpendPerMonth" />
                     </div>
                 </div>
 
@@ -112,7 +114,9 @@
                     <label for="max_spend_per_month">Account limit per month</label>
                     <div class="input-group input-group-lg input-group-readonly">
                         <div class="input-group-addon">£</div>
-                        <input class="form-control input-lg" id="max_spend_per_month" type="number" min="1" step="0.01" ng-model="customer.maxSpendPerMonth" />
+                        <input class="form-control input-lg" id="max_spend_per_month" type="number"
+                            min="500" step="0.01"
+                            ng-model="customer.maxSpendPerMonth" />
                     </div>
                 </div>
 
@@ -155,7 +159,9 @@
                     <label for="max_spend_per_month">Account limit per month</label>
                     <div class="input-group input-group-lg input-group-readonly">
                         <div class="input-group-addon">£</div>
-                        <input class="form-control input-lg" id="max_spend_per_month" type="number" min="1" step="0.01" ng-model="customer.maxSpendPerMonth" />
+                        <input class="form-control input-lg" id="max_spend_per_month" type="number"
+                            min="500" step="0.01"
+                            ng-model="customer.maxSpendPerMonth" />
                     </div>
                 </div>
 
