Add search link to staff navigation.

--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -4,6 +4,7 @@
 <li><a href="/admin/vendors">Vendors</a></li>
 <li><a href="/admin/customers">Customers</a></li>
 <li><a href="/admin/users">Users</a></li>
+<li><a href="/search">Search</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
         My account <span class="caret"></span>
