Change head count filter in search page to a text input.

--- a/src/web/templates/general/search.html
+++ b/src/web/templates/general/search.html
@@ -29,12 +29,9 @@
 
                 <div class="cp-form-group col-md-2">
                     <label class="cp-form-label" for="head_count">No. of people?</label>
-                    <select class="cp-form-control"
+                    <input class="cp-form-control"
                         id="head_count"
-                        ng-model="search.headCount"
-                        ng-options="headCount for headCount in headCountOptions">
-                            <option value="">-</option>
-                    </select>
+                        ng-model="search.headCount" />
                 </div>
 
                 <div class="cp-form-group col-md-2">
