--- a/src/web/templates/admin/orders.html
+++ b/src/web/templates/admin/orders.html
@@ -26,9 +26,7 @@
 
     <p>This will create a CSV of the filtered orders.</p>
 
-    <p>
-        Select the fields you want to include:
-    </p>
+    <p>Select the fields you want to include:</p>
 
     <p ng-repeat="field in csvFields">
         <label for="cp-csv-field-{{ field.field }}">{{ field.label }}</label>
