--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -21,6 +21,7 @@
         <li><a href="/admin/supplier-agreements">Supplier agreements</a></li>
         <li><a href="/admin/database-query">Database query</a></li>
         <li><a href="/admin/global-id-lookup">Global ID lookup</a></li>
+        <li><a href="/admin/random-tools">Random tools</a></li>
         <li><a href="/logout">Log out</a></li>
     </ul>
 </li>
