Add "get coordinates from postcode" to "random tools" page.

--- a/src/web/templates/admin/random-tools.html
+++ b/src/web/templates/admin/random-tools.html
@@ -4,4 +4,12 @@
     <p>
         This page gives access to some tools that tech have. These are all unspeced.
     </p>
+
+    <h2>Get coordinates from postcode</h2>
+
+    <div>
+        <input ng-model="inputs.getCoordinatesFromPostcode.postcode" placeholder="Enter a postcode" />
+        <br />
+        <button ng-click="getCoordinatesFromPostcode()">Get coordinates</button>
+    </div>
 </div>
